# remoteShell-mcp

./: CHANGELOG.md  README.md  pyproject.toml  task.md
src/remoteshell_mcp/: command_validator.py  host_store.py  server.py
tests/: test_connection_manager.py  test_host_store.py
